# py-backend-labs-at

./: README.md
homework/todo_project/: db.sqlite3
module-2/1-resilient-data-importer-cli/: .pre-commit-config.yaml  main.py  pyproject.toml
module-2/1-resilient-data-importer-cli/src/1_resilient_data_importer_cli/: cli.py  main.py
module-2/1-resilient-data-importer-cli/src/1_resilient_data_importer_cli/exceptions/: exceptions.py
module-2/1-resilient-data-importer-cli/src/1_resilient_data_importer_cli/parser/: parser.py
module-2/1-resilient-data-importer-cli/src/1_resilient_data_importer_cli/repository/: repository.py
module-2/1-resilient-data-importer-cli/src/1_resilient_data_importer_cli/validator/: validator.py
module-2/1-resilient-data-importer-cli/src/lab1_resilient_data_importer_cli/context_manager/: file_handler.py
module-2/data-importer-cli-1/: .coverage  README.md  main.py  pyproject.toml  setup.py
module-2/data-importer-cli-1/data/: users.csv  users.json
module-2/data-importer-cli-1/src/importer_cli/: cli.py
module-2/data-importer-cli-1/src/importer_cli/context_manager/: file_handler.py
module-2/data-importer-cli-1/src/importer_cli/exceptions/: exceptions.py
module-2/data-importer-cli-1/src/importer_cli/models/: models.py
module-2/data-importer-cli-1/src/importer_cli/parser/: parser.py
module-2/data-importer-cli-1/src/importer_cli/repository/: repository.py
module-2/data-importer-cli-1/src/importer_cli/validator/: validator.py
module-2/data-importer-cli-1/tests/: conftest.py  test_cli.py  test_exceptions.py  test_file_handler.py  test_integration.py  test_models.py  test_parser.py  test_repository.py  test_validator.py
module-2/weather_api_service_2/: .coverage  README.md  pyproject.toml  requirements.txt
module-3/student_grade_analytics_tool/: README.md  pyproject.toml  report.json
module-3/student_grade_analytics_tool/data/: report.json  sample_grades.csv
module-3/student_grade_analytics_tool/memory_comparison/: all_comparisons.py  dataclass.py  namedtuple.py
module-3/student_grade_analytics_tool/output/: report.json
module-3/student_grade_analytics_tool/src/student_grade_analytics_tool/: analysis.py  io_manager.py  main.py  models.py
module-3/student_grade_analytics_tool/tests/: test_analysis.py  test_main.py
module-4/e-commerce-analytics-data-pipeline/: .env  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
module-4/e-commerce-analytics-data-pipeline/sql/: diagram.mmd  schema.sql
module-4/e-commerce-analytics-data-pipeline/src/e_commerce_analytics_data_pipeline/: analytics.py  main.py  models.py  operations.py
module-4/e-commerce-analytics-data-pipeline/src/e_commerce_analytics_data_pipeline/database/: nosql.py  postgres.py  seed_data.py
module-6-7-8-9/: .env.example  .gitignore  Dockerfile  README.md  README2.md  docker-compose.yml  requirements.txt
(+84 files in other folders)
