[project]
name = "1-resilient-data-importer-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "Joseph Lubandi",email = "lubandi1234@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "1_resilient_data_importer_cli", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
