[project]
name = "1-resilient-data-importer-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "Joseph Lubandi",email = "lubandi1234@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "importer_cli", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
ignore = ["E501"]


[dependency-groups]
dev = [
    "autopep8 (>=2.3.2,<3.0.0)",
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0"
]
