[project]
name = "student-grade-analytics-tool"
version = "0.1.0"
description = ""
authors = [
    {name = "Joseph Lubandi",email = "lubandi1234@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "student_grade_analytics_tool", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
