[project]
name = "e-commerce-analytics-data-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Joseph Lubandi",email = "lubandi1234@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "e_commerce_analytics_data_pipeline", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
